# kde_connect_webapp_poc

./: .gitignore  AGENTS.md  README.md  classes_kdeconnect_webapp.dot  classes_your_package_name.dot  docs.md  index.html  kdeconnect-webapp.service  pyproject.toml  shell.nix  shell_backup.nix
client-isolated-env/: backup.py  main.py  main.sh  main_test.py  monitor.py  shell+wiregard.nix  shell.nix
docs/: finaldoc.md  finaldoc.typ  finaldoc_template.typ  report.typ  requiredpages.txt  template.typ
frontend/webapp-old/: index.html
frontend/webapp-sveltekit/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/webapp-sveltekit/src/: app.css
frontend/webapp-sveltekit/src/lib/api/: client.ts  devices.ts  mock.ts
frontend/webapp-sveltekit/src/lib/stores/: windows.ts
frontend/webapp-sveltekit/src/lib/utils/: constants.ts
frontend/webapp-sveltekit/src/routes/: +layout.svelte  +page.svelte
kdeconnect_webapp/: api.py  client.py  factories.py  packet.py  protocols.py  server.py
kdeconnect_webapp/webapp/: script.js  style.css
mockserver/: main.py  test_endpoints.sh
tailscale_integrated/: app.py  isolation_manager_bc.py  requirements.txt  shell.nix
tailscaletest/: acl.jsonc  cleanup.sh  create_isolatate_tailscale4.py  main_1.py  main_login_tailscale.py  mainold.py  oauthtest.py  removetags.py  try-dynamictag.py
tailscaletest/backup/: create_isolatate_tailscale2.py  create_isolatate_tailscale3.py  create_isolatate_tailscale4.py
tailscaletest/docs/: authcreation.md
tailscaletest/templates/: dashboard.html  login.html
(+14 files in other folders)
