[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kdeconnect-webapp"
authors = [{name = "metallkopf"}]
description = "Headless KDE Connect"
requires-python = ">=3.10"
keywords = ["headless", "kdeconnect", "kde-connect", "server"]
license = "GPL-2.0-only"
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["version"]
urls = {Source = "https://github.com/metallkopf/kdeconnect-webapp"}
dependencies = [
  "pillow",
  "pyopenssl",
  "requests",
  "twisted"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
  "Topic :: Internet",
  "Topic :: Utilities",
]

[project.optional-dependencies]
devel = ["build", "flake8", "isort", "pytest", "twine"]

[project.scripts]
kdeconnect-webapp = "kdeconnect_webapp.client:main"
kdeconnect-webapp-d = "kdeconnect_webapp.server:main"

[tool.setuptools]
packages = ["kdeconnect_webapp"]
include-package-data = true

[tool.setuptools.package-data]
kdeconnect_webapp = ["webapp/*"]

[tool.setuptools.dynamic]
version = {attr = "kdeconnect_webapp.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
